--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App weeeeee</title>
+    <!-- Ga4、google font..放這兒 -->
   </head>
   <body>
     <div id="app"></div>
