1.creat scss files and folders by Brian's class. 2.change variable"app" to "vueApp" in main.js, and commit on it.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App weeeeee</title>
-    <!-- Ga4、google font..放這兒 -->
+    <!-- Ga4、google fonts..放這兒 -->
   </head>
   <body>
     <div id="app"></div>
