alter ticket pages

--- a/src/html/ticket.html
+++ b/src/html/ticket.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>立即購票</title>
 </head>
 <body>
-    
+    <section>
+        <img src="https://fakeimg.pl/300x200/200">
+    </section>
 </body>
 </html>
