add content  vote page  , school page

--- a/src/html/vote.html
+++ b/src/html/vote.html
@@ -89,5 +89,9 @@
       <div class="AnimalSquirrel"><img src="" alt="松鼠" /></div>
       <div class="AnimalSquirrel"></div>
     </section>
+
+    <sertion class="vote_overview">
+      <div class="title"></div>
+    </sertion>
   </body>
 </html>
