--- a/src/html/member.html
+++ b/src/html/member.html
@@ -50,34 +50,46 @@
     <title>上傳並顯示圖片</title>
   </head>
   <body>
-    <input type="file" id="fileInput" accept="image/*" />
-    <img id="uploadedImage" src="" alt="上傳的圖片" />
-    <div id="errorText" class="error-text"></div>
+    <div id="app">
+      <input type="file" @change="handleFileChange" accept="image/*" />
+      <img :src="imageUrl" alt="上傳的圖片" />
+      <div class="error-text">{{ errorText }}</div>
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script>
-      const fileInput = document.getElementById("fileInput");
-      const uploadedImage = document.getElementById("uploadedImage");
-      const errorText = document.getElementById("errorText");
+      new Vue({
+        el: "#app",
+        data: {
+          imageUrl: "", // 存儲圖片的URL
+          errorText: "", // 存儲錯誤消息文本
+        },
+        methods: {
+          handleFileChange(event) {
+            const file = event.target.files[0]; // 從事件獲取選擇的文件
+            if (file) {
+              const maxSizeKB = 1024; // 設定最大文件大小，以KB為單位
 
-      fileInput.addEventListener("change", function () {
-        const file = fileInput.files[0];
-        if (file) {
-          const maxSizeKB = 1024; // 設定最大文件大小，以KB為單位
+              if (file.size <= maxSizeKB * 1024) {
+                // 檢查文件大小是否在限制範圍內
+                const reader = new FileReader();
 
-          if (file.size <= maxSizeKB * 1024) {
-            const reader = new FileReader();
+                reader.onload = (e) => {
+                  this.imageUrl = e.target.result; // 將圖片的DataURL設定為imageUrl
+                  this.errorText = ""; // 清除錯誤消息
+                };
 
-            reader.onload = function (e) {
-              uploadedImage.src = e.target.result;
-              errorText.textContent = "";
-            };
-
-            reader.readAsDataURL(file);
-          } else {
-            errorText.textContent = "上傳的圖片大小超過限制。";
-            uploadedImage.src = "";
-          }
-        }
+                reader.readAsDataURL(file); // 開始讀取文件內容
+              } else {
+                this.errorText = "上傳的圖片大小超過限制。"; // 設定錯誤消息
+                this.imageUrl = ""; // 清除圖片URL
+              }
+            }
+          },
+        },
+        mounted() {
+          // 在页面加载时可以执行一些初始化操作
+        },
       });
     </script>
 
