update home 網頁預覽圖 網頁標題

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App weeeeee</title>
+    <title>PXZoO</title>
+    <meta property="og:image" content="/public/web icon.jpg">
     <!-- Ga4、google fonts..放這兒 -->
   </head>
   <body>
