update home rwd weather

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- ico -->
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PXZoO</title>
+    <!-- 網站預覽圖 -->
     <meta property="og:image" content="/public/web icon.jpg">
     <!-- Ga4、google fonts..放這兒 -->
   </head>
