--- a/src/html/member.html
+++ b/src/html/member.html
@@ -1,102 +1,50 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <title>Vue.js保存並還原修改的資料</title>
-  </head>
-  <body>
-    <div id="app">
-      <input type="text" v-model="userInput" placeholder="輸入文字" />
-      <button @click="updateText">
-        更新
-        <p>標籤</p>
-      </button>
-      <p>{{ output }}</p>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script>
-      new Vue({
-        el: "#app",
-        data: {
-          userInput: "",
-          output: "",
-        },
-        methods: {
-          updateText: function () {
-            if (this.userInput) {
-              this.output = this.userInput;
-              this.userInput = "";
-
-              // 將修改的資料存儲在localStorage中
-              localStorage.setItem("modifiedData", this.output);
-            }
-          },
-        },
-        mounted: function () {
-          // 在頁面載入時，檢查是否有保存的資料，並還原它
-          const savedData = localStorage.getItem("modifiedData");
-          if (savedData) {
-            this.output = savedData;
-          }
-        },
-      });
-    </script>
-  </body>
-</html> -->
-
 <!DOCTYPE html>
 <html>
   <head>
-    <title>上傳並顯示圖片</title>
+    <title>開合式選單示例</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <style>
+      /* 樣式可以在這裡定義 */
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      .menu {
+        margin: 0;
+        padding: 0;
+        width: 230px;
+        height: 100vh;
+        background-color: blanchedalmond;
+      }
+      .menu-item {
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <div id="app">
-      <input type="file" @change="handleFileChange" accept="image/*" />
-      <img :src="imageUrl" alt="上傳的圖片" />
-      <div class="error-text">{{ errorText }}</div>
+      <div class="menu" @click="toggleMenu">
+        <span>{{ isOpen ? '^' : 'ˇ' }}</span>
+        <ul v-if="isOpen" class="menu">
+          <li class="menu-item">選項1</li>
+          <li class="menu-item">選項2</li>
+          <li class="menu-item">選項3</li>
+        </ul>
+      </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script>
       new Vue({
         el: "#app",
         data: {
-          imageUrl: "", // 存儲圖片的URL
-          errorText: "", // 存儲錯誤消息文本
+          isOpen: false, // 控制選單的展開/收合狀態
         },
         methods: {
-          handleFileChange(event) {
-            const file = event.target.files[0]; // 從事件獲取選擇的文件
-            if (file) {
-              const maxSizeKB = 1024; // 設定最大文件大小，以KB為單位
-
-              if (file.size <= maxSizeKB * 1024) {
-                // 檢查文件大小是否在限制範圍內
-                const reader = new FileReader();
-
-                reader.onload = (e) => {
-                  this.imageUrl = e.target.result; // 將圖片的DataURL設定為imageUrl
-                  this.errorText = ""; // 清除錯誤消息
-                };
-
-                reader.readAsDataURL(file); // 開始讀取文件內容
-              } else {
-                this.errorText = "上傳的圖片大小超過限制。"; // 設定錯誤消息
-                this.imageUrl = ""; // 清除圖片URL
-              }
-            }
+          toggleMenu() {
+            this.isOpen = !this.isOpen;
           },
-        },
-        mounted() {
-          // 在页面加载时可以执行一些初始化操作
         },
       });
     </script>
-
-    <style>
-      .error-text {
-        color: red;
-      }
-    </style>
   </body>
 </html>
