--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <!-- ico -->
     <link rel="icon" href="/favicon.ico" />
+    <meta property="og:image" content="/images/your-image.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PXZoO</title>
     <!-- 網站預覽圖 -->
