--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <!-- ico -->
     <link rel="icon" href="/favicon.ico" />
-    <meta property="og:image" content="/images/your-image.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PXZoO</title>
     <!-- 網站預覽圖 -->
-    <meta property="og:image" content="/public/web icon.jpg">
+    <meta property="og:image" content="/web_icon.jpg">
     <!-- Ga4、google fonts..放這兒 -->
   </head>
   <body>
